# kitty-plant-generator

./: CMakeLists.txt  LICENSE  README.md
common/: abstract_slice.h  genom.h  raw_genom.h  tree_builder.h
plant_viewer/: CMakeLists.txt  application.cpp  application.h  drawer.cpp  drawer.h  main.cpp
plant_viewer/io/: loader.h
plant_viewer/slices/: abstract_drawable_slice.h  animated_slice.cpp  animated_slice.h
plant_viewer/utils/: functions.h
random_generator/: CMakeLists.txt  main.cpp
